export enum GradeGoal {
  A = "A",
  B = "B",
  C = "C",
  D = "D",
  PASS = "Bestått",
}
