export enum MaxSize {
  SMALL = "Liten (2-4stk)",
  MEDIUM = "Medium (5-7stk)",
  LARGE = "Stor (8+)",
  ANY = "Ikke viktig",
}
