export enum WorkFrequency {
  M1 = "En gang i måneden",
  M2 = "Annenhver uke",
  W1 = "1 gang i uka",
  W2 = "2 ganger i uka",
  W3 = "3 ganger i uka",
  W4 = "4 ganger i uka",
  W5 = "5 ganger i uka",
  W6 = "6 ganger i uka",
  W7 = "Hver dag",
  ANY = "Hva som helst",
}
