export enum WorkType {
  LOCAL = "Fysisk",
  REMOTE = "Digitalt",
  HYBRID = "Begge",
  ANY = "Hva som helst",
}
